spacing fixed

--- a/src/components/SecondPartContent/SecondPartContent.scss
+++ b/src/components/SecondPartContent/SecondPartContent.scss
@@ -128,7 +128,7 @@
     }
 
     .banner___item___{
-        background:url(../../assets/images/banner/young-man-using-laptop-computer-phone.jpg);
+        background:linear-gradient(#0000003a,#0000003a),url(../../assets/images/banner/young-man-using-laptop-computer-phone.jpg);
         background-repeat: no-repeat;
         background-position: center center;
         height: 100vh;
